update main with the last version of the project (ProjetServeurNodeCRUD)

--- a/app/src/client/ressources/css/style.css
+++ b/app/src/client/ressources/css/style.css
@@ -64,3 +64,12 @@ ul {
 .liadmin:hover {
     color: yellow;
 }
+
+#msgEnreg{
+    color:red;
+}
+
+.style-cards {
+    margin: 15px;
+    padding: 12px;
+}
