--- a/app/src/client/css/style.css
+++ b/app/src/client/css/style.css
@@ -20,6 +20,13 @@
     user-select: none;
   }
 
+  .custom-image {
+    width: 100%;
+    height: 225px;
+    object-fit: cover;
+  }
+
+
   @media (min-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
@@ -155,4 +162,8 @@ ul {
 #button_decouv {
   margin-top: 50px !important;
   margin-bottom: 0 !important;
+}
+
+h4, h1 {
+  color: rgb(104, 207, 190)
 }
